bugs/tests/fuzz-05-18-13-21-59/r_668_r_41_issue3623-1_F10_P41_10_M1.stderr
likely_hits/r_668_r_41_issue3623-1_F10_P41_10_M1.p4(2): [--Werror=type-error] error: match_kind: cast not supported
 b = ((match_kind) (true)) };
       ^^^^^^^^^^
In file: /p4c/frontends/p4/typeChecking/typeChecker.cpp:172
Compiler Bug: /p4c/frontends/p4/typeChecking/typeChecker.cpp:172: Null srcType

